Alterações nas rotas do openAPI
