# server/OpenAPI.yaml
@@ -1,7 +1,15 @@
 openapi: 3.0.0
 info:
   title: API de Monitoramento de Plantas
+  description: Monitoramento de Hortaliças cultivadas em casa
   version: v1
+  contact:
+    name: Equipe de suporte
+    email: "pedidos@email.com"
+  license:
+    name: MIT
+    url: "https://opensource.org/licenses/MIT"
+  
 servers:
   - url: http://localhost:3030
     description: Servidor local
@@ -9,9 +17,9 @@ servers:
 paths:
 
 #### Usuários ####
-  /usuarios:
+  /v1/users:
     post:
-      summary: Criar um novo usuário
+      summary: Cadastrar um novo usuário
       requestBody:
         required: true
         content:
@@ -21,14 +29,22 @@ paths:
               properties:
                 name:
                   type: string
-                  example: João da Silva
-                email:
+                  description: Nome do usuário
+                  example: "João da Silva"
+                email: 
                   type: string
-                  example: joao@gmail.com
-                senha:
+                  description: Email do usuário
+                  example: "joaodasilva@email.com"
+                password:
                   type: string
-                  format: password
-                  example: senha123
+                  description: Senha do usuário
+                  format: password 
+                  example: "SenhaForte123!"  
+                ## Lista das plantas do usuário  
+                list_plants:
+                  type: array
+                  description: Lista de plantas do usuário
+                  default: [] # Inicializa como uma lista vazia
       responses:
         '201':
           description: Usuário criado com sucesso
@@ -40,98 +56,25 @@ paths:
                   id:
                     type: string
                     description: ID do usuário criado
+                    example: "6345dfe2e849ef0012556391"
         '400':
           description: Requisição inválida (email já existente)
 
-  /usuarios/{id}/senha:
-    patch:
-      summary: Atualizar senha do usuário
+  /v1/users/{user_id}/plants:
+    get:
+      summary: Buscar plantas de um usuário
+      description: Retorna uma lista de plantas associadas a um usuário específico.
       parameters:
         - in: path
-          name: id
+          name: user_id
           required: true
           description: ID do usuário
           schema:
             type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                current_password:
-                  type: string
-                  description: Senha atual do usuário
-                  format: password
-                  example: teste123
-                new_password:
-                  type: string
-                  description: Nova senha do usuário
-                  format: password
-                  example: Senh@F0rt3
-                password_validation:
-                  type: string
-                  description: Confirmação da nova senha
-                  format: password
-                  example: Senh@F0rt3
+            example: "6345dfe2e849ef0012556391"
       responses:
         '200':
-          description: Senha atualizada com sucesso
-        '400':
-          description: Requisição inválida (Senhas não coincidem)
-        '401':
-          description: Usuário não autenticado
-
-
-#### Plantas ####
-  /plantas:
-    post:
-      summary: Cadastrar uma nova planta
-      description: Endpoint para cadastrar uma nova planta
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  description: Nome da planta
-                  example: Cebolinha
-                type:
-                  type: string
-                  description: Tipo da planta
-                  enum: [Hortaliça ,Flor, Fruta, Árvore, Arbusto]
-      responses:
-        '201':
-          description: Planta cadastrada com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    example: 1b54fg4773
-                  name:
-                    type: string
-                    example: cebolinha
-                  type:
-                    type: string
-                    example: Hortaliça
-                  date_created:
-                    type: string
-                    format: date
-                    example: "2024-10-17T23:59:59Z"
-
-    get:
-      summary: Listar todas as plantas
-      description: Retornar todas as plantas cadastradas
-      responses:
-        '200':
-          description: Lista de plantas
+          description: Lista de plantas do usuário
           content:
             application/json:
               schema:
@@ -141,22 +84,137 @@ paths:
                   properties:
                     id:
                       type: string
-                      description: ID da planta
-                      example: 1b54fg4773
+                      example: "1b54fg4773"
                     name:
                       type: string
-                      description: Nome da planta
-                      example: cebolinha
+                      example: "Cebolinha"
                     type:
                       type: string
-                      description: Tipo da planta
-                      example: Hotaliça
+                      example: "Codimentos"
                     date_created:
                       type: string
-                      format: date
-                      example: "2024-10-17T23:59:59Z"
-  
-  /plantas/{id}:
+                      format: date-time
+                      description: Data de criação da planta
+                      example: "2024-10-20T14:46:14Z"
+        '404':
+          description: Usuário não encontrado        
+
+### Autenticação ###
+  /v1/auth/login:
+    post:
+      summary: Efetua login do usuário
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email: 
+                  type: string
+                  description: Email do usuário
+                  example: "joaodasilva@email.com"
+                password:
+                  type: string
+                  description: Senha do usuário
+                  format: password 
+                  example: "SenhaForte123!"  
+      responses:
+        '200':
+          description: Login realizado!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: string
+                    description: Nome do usuário
+                    example: "João da Silva"
+                  email: 
+                    type: string
+                    description: Email do usuário
+                    example: "joaodasilva@email.com"
+  /v1/auth/reset_password:
+    post:
+      summary: Efetua a troca de senha do usuário
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: Email do usuário
+                  example: "joaodasilva@email.com"
+                current_password:
+                  type: string
+                  description: Senha atual
+                  example: "senhaAtinga!"
+                new_password:
+                  type: string
+                  description: Senha nova  
+                  example: "S3nh@N0va"
+      responses:
+        '200':
+          description: Alteração de senha
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Senha alterada com sucesso'
+        '400':
+          description: Senha não atende os requisitos minimos
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "A senha não atende os requisitos mínimos de 8 caracteres, inclua maiúsculas, minúsculas, números e caracteres especiais!" 
+
+#### Plantas ####
+  /v1/plants:
+    post:
+      summary: Cadastrar uma nova planta e associá-la ao usuário
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: string
+                  description: ID do usuário dono da planta
+                  example: 6345dfe2e849ef0012556391
+                name:
+                  type: string
+                  description: Nome da planta
+                  example: Cebolinha
+                type:
+                  type: string
+                  description: Tipo da planta
+                  example: Hortaliça
+      responses:
+        '201':
+          description: Planta cadastrada com sucesso e associada ao usuário
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  plant_id:
+                    type: string
+                    example: 1b54fg4773
+                  message:
+                    type: string
+                    example: Planta cadastrada com sucesso e associada ao usuário
+  /v1/plants/{id}:
     get:
       summary: Obter detalhes de uma planta
       parameters:
@@ -179,45 +237,116 @@ paths:
                     example: 1b54fg4773
                   name:
                     type: string
-                    example: cebolinha
+                    example: Cebolinha
                   type:
                     type: string
                     example: Hortaliça
                   date_created:
                     type: string
-                    format: date
-                    example: "2024-10-17T23:59:59Z"
+                    format: date-time
+                    description: Data de criação da planta
+                    example: "2024-10-20T14:46:14Z"
         '404':
           description: Planta não encontrada
 
     delete:
-      summary: Excluir uma planta
+      summary: Deletar uma planta
       parameters:
         - in: path
           name: id
           required: true
-          description: ID da planta
+          description: ID da planta a ser deletada
           schema:
             type: string
       responses:
         '204':
-          description: Planta excluída com sucesso
+          description: Planta deletada com sucesso
         '404':
           description: Planta não encontrada
-  
-#### Sensores ####  
-  /sensores:
+
+#### Espécies de Plantas ####
+  /v1/vegetables:
     get:
-      summary: Buscar dados de sensores
-      description: Retornar dados dos sensores filtrados por planta e outros critérios como data, temperatura e umidade.
+      summary: Buscar dados das espécies
+      description: Retorna dados das espécies com possibilidade de filtro por nome, dicas ou informações científicas
       parameters:
-        - name: plant
+        - name: name
           in: query
-          required: true
-          description: Nome da planta a ser filtrada
+          required: false
+          description: Nome da espécie
           schema:
             type: string
-            example: cebolinha
+            example: Hortelã
+        - name: watering_tips
+          in: query
+          required: false
+          description: Dicas de rega da espécie
+          schema:
+            type: string
+            example: "Regar 2 vezes por semana"
+        - name: sunlight_tips
+          in: query
+          required: false
+          description: Dicas de luz solar
+          schema:
+            type: string
+            example: "Precisa de luz solar direta"
+      responses:
+        '200':
+          description: Lista de espécies de plantas ou espécie específica
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      description: Nome da espécie
+                      example: Hortelã
+                    scientific_name:
+                      type: string
+                      description: Nome científico da espécie
+                      example: Mentha spicata
+                    watering_tips:
+                      type: string
+                      description: Dicas de rega
+                      example: "Regar 2 vezes por semana"
+                    sunlight_tips:
+                      type: string
+                      description: Dicas de luz solar
+                      example: "Precisa de luz solar direta"
+                    soil_tips:
+                      type: string
+                      description: Dicas de solo
+                      example: "Solo fértil e bem drenado"
+                    temperature_min:
+                      type: number
+                      description: Temperatura mínima recomendada
+                      example: 10
+                    temperature_max:
+                      type: number
+                      description: Temperatura máxima recomendada
+                      example: 35
+                    growth_time:
+                      type: string
+                      description: Tempo de crescimento
+                      example: "3 meses"
+
+#### Dados dos Sensores ####
+  /v1/sensors:
+    get:
+      summary: Buscar dados dos sensores
+      description: Retornar dados dos sensores filtrados por planta e outros critérios como data, temperatura e umidade.
+      parameters:
+        - name: plant_id
+          in: query
+          required: true
+          description: ID da planta para filtrar os registros
+          schema:
+            type: string
+            example: 1b54fg4773
         - name: start_date
           in: query
           required: false
@@ -233,7 +362,7 @@ paths:
           schema:
             type: string
             format: date-time
-            example: "2024-10-17T23:59:59Z"
+            example: "2024-10-20T23:59:59Z"
         - name: temperature_min
           in: query
           required: false
@@ -283,15 +412,15 @@ paths:
                       type: string
                       description: Nome da planta monitorada
                       example: Cebolinha
-                    temperature_air_celsius:
+                    temperature_air:
                       type: number
                       description: Temperatura do ar em graus Celsius
                       example: 26.7
-                    humidity_air_percentage:
+                    humidity_air:
                       type: number
                       description: Umidade do ar em porcentagem
                       example: 54.4
-                    soil_moisture_status:
+                    soil_moisture:
                       type: string
                       description: Status da umidade do solo (seco, úmido, etc.)
                       example: Úmido
@@ -299,7 +428,7 @@ paths:
                       type: string
                       format: date-time
                       description: Data e hora do registro
-                      example: "2024-10-17T03:28:11Z"
+                      example: "2024-10-20T14:46:14Z"
                     week:
                       type: integer
                       description: Semana desde o início do monitoramento
